# libSpriteSheet

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  Sprite.hpp  SpriteAnimation.hpp  Spritesheet.hpp  libSpritesheet.hpp
cmake/: dump_cmake_variables.cmake
include/: Animation.hpp  AnimationFrame.hpp  Constants.hpp  DisplayedSprite.hpp  ImageUtils.hpp  Sprite.hpp  SpriteSheet.hpp  SpriteSheetManager.hpp  libSpriteSheet.hpp
src/: Animation.cpp  DisplayedSprite.cpp  Sprite.cpp  SpriteSheet.cpp
